2016-02-19  Lukas Kluft <lukas.kluft@gmail.com>

	* doc/cm.rst: Added a second example plot for Phase colormap.

	* doc/pyplots/plot_phase_sinus.py:

	New example plot to demonstrate the Phase colormap using sinus functions.

	* doc/pyplots/plot_qualitative1.py, doc/pyplots/plot_qualitative2.py:

	The figure size is now calculated using typhon.cm.figsize.

	* typhon/arts/xml/__init__.py (load): Added example to docstring.

	* typhon/cm/__init__.py (figsize):

	Added function to construct figure sizes matching the golden ration.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.6.

2016-02-18  Lukas Kluft <lukas.kluft@gmail.com>

	* typhon/__init__.py: Do not import cm automatically.

	The colormap module has to be imported directly using 'import typhon.cm'.

	* doc/pyplots/plot_density.py doc/pyplots/plot_phase.py
	doc/pyplots/plot_qualitative1.py doc/pyplots/plot_qualitative2.py
	doc/pyplots/plot_speed.py doc/pyplots/plot_temperature.py:

	Added the direct import of typhon.cm to the example plots.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Post-upload version bump to 0.2.5.

2016-02-18  Oliver Lemke  <olemke@core-dump.info>

	* ChangeLog: Got lost in previous commit.

	* setup.py:

	Change status from Planning to Alpha.

	Remove Python 3.3 compatibility.

	Add setuptools and matplotlib to requirements. Add version numbers for
	numpy and scipy.

	* typhon/arts/__init__.py, doc/arts.rst:

	Move module description from doc to module. Add typhon.arts as
	automodule in doc.

	* typhon/arts/xml/__init__.py: Shorten module docstring.

	* typhon/arts/griddedfield.py:

	Lazy import of netCDF4 to avoid global dependency.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>

	* doc/cm.rst, doc/xml.rst: Renamed some headers.

	* typhon/arts/sensor.py: Fix typos.

	* typhon/arts/xml/__init__.py: Fix term.

2016-02-17  Oliver Lemke  <olemke@core-dump.info>
