@@ -1,0 +1,10 @@
+typhon.plots
+===========
+
+Module contents
+---------------
+
+.. automodule:: typhon.plots
+    :members:
+    :undoc-members:
+    :show-inheritance:
